tests/ui/lifetimes/issue-17728.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/issue-17728.rs:108:14
   |
LL | /     match to_parse {
LL | |         "w" | "west" => RoomDirection::West,
LL | |         "e" | "east" => RoomDirection::East,
LL | |         "n" | "north" => RoomDirection::North,
...  |
LL | |         "down" => RoomDirection::Down,
   | |                   ------------------- this and all prior arms are found to be of type `RoomDirection`
LL | |         _ => None
   | |              ^^^^ expected `RoomDirection`, found `Option<_>`
LL | |     }
   | |_____- `match` arms have incompatible types
   |
   = note: expected enum `RoomDirection`
              found enum `Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
